# AsteroidOSSync

./: .gitignore  AUTHORS  README.md  build-passt.sh  build.gradle  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts  values-es
.github/workflows/: android.yml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/assets/: icons.properties
app/src/main/cpp/: CMakeLists.txt  build_depends.sh  sync.cpp
app/src/main/cpp/libslirp/: CHANGELOG.md  CMakeLists.txt  meson.build  meson_options.txt
app/src/main/cpp/libslirp/src/: ip.h  ip6.h  libvdeslirp.c  libvdeslirp.h  minglib.h  stream.c  tcp.h  util.c  vmstate.c
app/src/main/lib/easyweather/: README.md
app/src/main/lib/material-intro-screen/: README.md  build.gradle
app/src/main/res/: README
app/src/main/res/drawable-hdpi/: battery_full.xml  bluetooth_connect.xml  cloud.xml  (+19 more)
fastlane/metadata/android/de-DE/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/fr-FR/: full_description.txt  short_description.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/main/: AndroidManifest.xml
src/main/res/anim/: fab_anim.xml
src/main/res/layout/: device_control.xml  device_scan.xml  listitem_device.xml
src/main/res/values/: colors.xml  dimens.xml  strings.xml
(+296 files in other folders)
